# tempestas

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  LICENSE  README.md  format_staged.bat  format_staged.sh
.github/: copilot-instructions.md
.github/workflows/: build.yml
cmake/: ProjectWarnings.cmake  TstAddLibrary.cmake
src/: CMakeLists.txt
src/application/: CMakeLists.txt  arg_parser.cpp  arg_parser.h  glfw_context.cpp  glfw_context.h  glfw_window.cpp  glfw_window.h  main_window.h  window.cpp  window.h
src/core/: CMakeLists.txt  assert.h  core.h  platform.h  position.h  rectangle.h
src/core/container/: queue.h
src/core/util/: hash.h
src/device/: CMakeLists.txt  keyboard.h  monitor.cpp  monitor.h  mouse.h
src/game/: CMakeLists.txt  main.cpp
src/rendering/: CMakeLists.txt  instance.cpp  instance.h  utils.h
tests/: CMakeLists.txt  test_runner.cpp
tests/application/: CMakeLists.txt  glfw_window_test.cpp  window_test.cpp
tests/core/: CMakeLists.txt  geometry_test.cpp
tests/core/container/: queue_test.cpp
tests/rendering/: CMakeLists.txt  lavapipe.cpp
